Archive2/52/d6027c6fc3e625/output
main.cpp:219:28: error: default initialization of an object of const type 'const <anonymous>::evaluator' requires a user-provided default constructor
    static const evaluator _evaluator;
                           ^
1 error generated.
